alternc (3.3~rc1) stable; urgency=low

  * unofficial Prerelease of AlternC 3.3
  * update_domaines now in PHP and using classes and hooks instead of BASH

 -- Benjamin Sonntag <benjamin@sonntag.fr>  Thu, 26 Jun 2014 15:13:00 +0200

alternc (3.2.1) stable; urgency=low

  * Version identical to 3.1 for Squeeze
  * Includes a small dovecot patch / dependency for dovecot 2.0 for Wheezy

 -- Benjamin Sonntag <benjamin@sonntag.fr>  Thu, 28 Mar 2014 18:19:00 +0200
alternc (3.1.2) oldstable; urgency=low

  * fix a bug when installing (doing patches from 3.1~rc)

 -- Benjamin Sonntag <benjamin@sonntag.fr>  Fri,  4 Jul 2014 12:44:12 +0100

alternc (3.1.1) oldstable; urgency=low

  * many bugfixed from 3.1 / 3.2 :
  * #1543 upgrade issues
  * #1521 awstats right issues
  * #1541 upload too big in browser doesn't show an error
  * #1546 error in delete_logs.sh cron
  * #1547 error with dkim during alternc.install
  * #1548 database creation
  * #1551 mysql account on remote server issue
  * #1552 error editing a file in the internal browser
  * #1560 roundcube login error
  * #1561 chown on ALTERNC_HTML
  * #1564 roundcube quota mail
  * #1565 no alternc-mailman package for wheezy
  * #1576 remove bad UNIQ index from mysql tables
  * #1580 mail: \n management in aliases
  * #1588 loosing custom DNS afterupgrade 3.0>3.1

 -- Benjamin Sonntag <benjamin@sonntag.fr>  Fri, 28 Mar 2014 17:44:21 +0100

alternc (3.1) stable; urgency=low

  * feature: import of existing DNS zone
  * feature: display of current DNS zone in dom_edit
  * LXC-host module in AlternC client-side. alternc-lxc package is server-side
  * menu became dynamic with a class
  * /var/alternc disapear to become Debian-compliant
    but we upgrade properly, keeping an existing /var/alternc
  * fix detection of ACL using pre-depends
  * fix dovecot SSL certificate (was pointing to an non-existing file)
  * configure dovecot properly when using /etc/alternc/alternc.pem
  * 3.1 can be built for Squeeze or Wheezy